# algoViz

./: .gitignore  CMakeLists.txt  README.md  coding_style.md
.claude/: settings.local.json
resources/qml/: Main.qml  Sidebar.qml  VisualizationArea.qml  qml.qrc
src/algorithms/: AStarSearch.cpp  AStarSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  DepthFirstSearch.cpp  DepthFirstSearch.h  DepthLimitedSearch.cpp  DepthLimitedSearch.h  GreedyBestFirstSearch.cpp  GreedyBestFirstSearch.h  InformedSearch.h  IterativeDeepeningAStar.cpp  IterativeDeepeningAStar.h  IterativeDeepeningDFS.cpp  IterativeDeepeningDFS.h  SearchAlgorithm.cpp  SearchAlgorithm.h  UniformCostSearch.cpp  UniformCostSearch.h  UninformedSearch.h  WeightedAStarSearch.cpp  WeightedAStarSearch.h
src/gui/: main.cpp  main_gui.cpp
src/gui/models/: InfoPanelModel.cpp  InfoPanelModel.h  VisualizationModel.cpp  VisualizationModel.h
src/gui/qml/: AppTheme.qml  InfoPanel.qml  Main.qml  Sidebar.qml  VisualizationArea.qml
src/models/: SidebarModel.cpp  SidebarModel.h  VisualizationModel.cpp  VisualizationModel.h
src/problems/: RomaniaProblem.h
